# PongMasterHT6

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/edgepong/: __init__.py  clock.py  config.py  logging_setup.py  main.py  mathutil.py  types.py
backend/edgepong/camera/: __init__.py  apriltag_detector.py  mediapipe_pose.py
backend/edgepong/fusion/: __init__.py  filter.py
backend/edgepong/game/: __init__.py  balance.py  collision.py  difficulty.py  physics.py  scoring.py  service.py  spawner.py  state_machine.py
backend/edgepong/metrics/: __init__.py  health.py
backend/edgepong/paddle/: __init__.py  haptics.py  mock_paddle.py  packets.py  udp_gateway.py
backend/edgepong/sim/: __init__.py  paddle_model.py
backend/edgepong/tests/: test_balance.py  test_collision.py  test_external_input.py  test_fault_injection.py  test_haptics.py  test_math_scoring.py  test_packets.py  test_player_serve.py  test_rally.py  test_spawner.py  test_state_machine.py
backend/edgepong/web/: __init__.py  server.py
backend/scripts/: calibrate_imu_axes.py  headless_demo.py
config/: default.yaml
docs/: architecture.md  protocol.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.ts  main.ts  types.ts
paddle-firmware/: platformio.ini
paddle-firmware/bench_espidf/: .gitignore  CMakeLists.txt  README.md
paddle-firmware/include/: config.h  packets.h  pins.h
paddle-firmware/paddle_espidf/: CMakeLists.txt  README.md  sdkconfig.defaults
scripts/: run-dev.ps1  run-prod.ps1
(+26 files in other folders)
